[package]
name = "stories"
version = "0.5.0"
edition = "2021"

[package.metadata.release]
publish = false
push = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.markdown", "--tag", "{{version}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-openai = "0.10.2"
atty = "0.2.14"
cacache = "11.0.0"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
indoc = "2.0.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
pulldown-cmark = "0.9.2"
pulldown-cmark-mdcat = "2.0.3"
regex = "1.8.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
sha256 = "1.1.2"
slugify = "0.1.0"
syntect = "5.0.0"
tabled = { version = "0.10.0", features = ["color"] }
terminal-link = "0.1.0"
terminal_size = "0.2.6"
tokio = { version = "1.25.0", features = ["full"] }
webbrowser = "0.8.7"
